--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,8 @@
-<h1>Our first view 🚀</h1>
-
-<p>Hopefully this will show up as well</p>
+<header>
+  <form id="form">
+    <input type="text" id="search" placeholder="Search" class="search" />
+  </form>
+</header>
+<main id="main"></main>
+<!--linking the javascript file-->
+<script src="script.js"></script>
