--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,7 @@
+<h1>PURPLE MOVIES</h1>
 <header>
   <form id="form">
-    <input type="text" id="search" placeholder="Search" class="search" />
+    <input type="text" id="search" placeholder="Type search here..." class="search" />
   </form>
 </header>
 <main id="main"></main>
