--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,6 @@
 body {
   font-family: poppins;
   background-color: rgb(108, 39, 119);
-  background-image: linear-gradient(rgb(108, 39, 119), rgb(120, 69, 128))
 }
 
 h1 {
@@ -62,7 +61,7 @@ main {
 .movie {
   background-color: rgb(108, 39, 119);
   border-radius: 10px;
-  box-shadow: 2px 3px 1 white;
+  box-shadow: 1.5px 1.5px white;
   overflow: hidden;
   position: relative;
   margin: 1rem;
