--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,12 @@
 <h1>PURPLE MOVIES</h1>
+  <h5>
+    <a href="" class="typewrite" data-period="2000" data-type='[ "Hello form Purple Movies!!", "If you love films, you are in the right place", "I like designing software.", "I love to create things.", "Experience of Ruby on Rails, HTML, CSS + JavaScript.", "Currently learning Java + React...", "...deeper learning of JavaScript + UX/UI design...", "...as well as the Professional Scrum for Software Development (APS-SD) qualification.", "Recently completed the 10-week Le Wagon Amsterdam Web Dev Bootcamp...", "...and obtained numerous Codecademy language, framework + tool certificates.", "Some non-tech fun facts about me?..", "...I was in a Bollywood film...", "...(seriously!!)...", "...I ran the Barcelona marathon...", "...and I ferment my own hot sauce.", "For more fun facts (and actual experience info)...", "...you can find my bio, projects + contact details below.", "Thanks for visiting my website.", "Cheers." ]'>
+      <span class="wrap"></span>
+    </a>
+  </h5>
 <header>
   <form id="form">
-    <input type="text" id="search" placeholder="Type search here..." class="search" />
+    <input type="text" id="search" placeholder="Type movie search here..." class="search" />
   </form>
 </header>
 <main id="main"></main>
