--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,18 +17,18 @@
 
 body {
   font-family: poppins;
-  background-color: rgb(108, 39, 119);
+  background-color: rgb(235, 222, 240);
 }
 
 h1 {
   font-size: 5rem;
-  color: white;
+  color: rgb(74, 35, 90);
   text-align: center;
   margin: 0;
 }
 
 header {
-  background-color: rgb(108, 39, 119);
+  background-color: rgb(235, 222, 240);
   display: flex;
   justify-content: center;
   padding: 1rem;
@@ -36,31 +36,39 @@ header {
 
 .search {
   background-color: transparent;
-  border: 2px solid white;
+  border: 2px solid rgb(91, 44, 111);
   border-radius: 50px;
-  color: white;
+  color: rgb(74, 35, 90);
   font-size: 1.5rem;
   padding: 1rem 2rem;
   height: 2rem;
-  width: 34rem;
+  width: 64vh;
 }
 
 .search::placeholder {
-  color: white;
+  color: rgb(74, 35, 90);
+  opacity: 0.5;
 }
 
 .search::focus {
   background-color: white;
 }
 
+h5 {
+  font-family: poppins;
+  font-size: 2em;
+  color: rgb(74, 35, 90);
+  text-align: center;
+  margin: 0;
+  font-weight: 300;
+}
+
 main {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 0.5em;
+  grid-template-columns: 1fr 1fr 1fr;
   justify-content: space-between;
   flex-wrap: wrap;
-  transition: 0.3s linear;
-  margin: 8vh;
+  transition: 0.6s linear;
   overflow: hidden;
 }
 
@@ -72,8 +80,8 @@ main {
   box-shadow: 2px 2px white;
   overflow: hidden;
   position: relative;
-  width: 24em;
-  height: 24em;
+  width: auto;
+  height: 40vh;
   margin: 1em;
   grid-gap: 0.75em;
   justify-content: space-between;
@@ -81,7 +89,8 @@ main {
   transition: 0.3s linear;
 }
 .movie img {
-  width: 100%;
+  height: 40vh;
+  width: auto;
 }
 
 .movie-info {
